--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<scm>
 		<connection>scm:git:git://github.com/openlg/graphlib.git</connection>
-		<url>https://github.com/openlg/graphlib</url>
+		<url>https://github.com/openlg/graphlib.git</url>
 	</scm>
 
 	<developers>
