add github action

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<junit.version>4.13.1</junit.version>
+
+		<sonar.organization>openlg</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
